--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
       </div>
     </div>
 
-    <script src="./js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
