remove wrong message style from passwordBtn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="nav-bar__search">
             <i class="fa fa-search" aria-hidden="true"></i>
             <span class="nav-bar__search-title">جستجو</span>
-            <input class="" type="search" name="" id="" />
+            <input class="searchInput" type="search" name="" id="" />
           </div>
           <div class="nav-bar__sort navBarSort">
             <span class="nav-bar__sort-title">مرتب سازی</span>
