complete sort menu

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
           <div class="nav-bar__menu">
             <ul class="sort-menu">
-              <li class="sort-menu__item">تاریخ به روزرسانی</li>
-              <li class="sort-menu__item">تاریح ایجاد</li>
+              <li class="sort-menu__item noteLastUpdated">تاریخ آخرین به روزرسانی</li>
+              <li class="sort-menu__item noteCreatedTime">تاریح ایجاد</li>
             </ul>
 
             <ul class="favorite-menu favoriteMenu">
