add date fns for show in footer of note

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="#" type="image/x-icon">
     <title>note app</title>
     <link
       rel="stylesheet"
@@ -12,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="/src/css/style.css"/> -->
   </head>
   <body>
     <div class="main-section">
@@ -75,7 +76,7 @@
         <div class="content">
           <h2 class="content__title">یادداشت ها</h2>
           <div class="content__empty-img contentEmptyImg">
-            <img src="./assets/images/add-note-3.jpg" alt="" />
+            <img src="add-note-3.jpg" alt="" />
           </div>
           <div class="note-items" id="app">
             
@@ -84,6 +85,6 @@
       </div>
     </div>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
