fix netlify 404 error

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <div class="content">
           <h2 class="content__title">یادداشت ها</h2>
           <div class="content__empty-img contentEmptyImg">
-            <img src="add-note-3.jpg" alt="" />
+            <img src="/public/add-note-3.jpg" alt="" />
           </div>
           <div class="note-items" id="app">
             
